--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 
 body{
-    background-image: url('kirb.png');
-    background-size: cover;
-    
-    
-    
-    height: 100vh;
+    background-color:white; 
     padding:0;
     margin:0;
 }
+img {
+    width: 30%;
+}
+
+div {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    }
