--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,12 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #555555;
+  color: #eee;
 }
 
 a {
   text-decoration: none;
-  color: #7cc576;
+  color: #a335ff;
 }
 
 a:hover {
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #7cc576;
+  background: #a335ff;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -56,7 +56,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #97d193;
+  background: #a335ff;
   color: #fff;
 }
 
@@ -82,8 +82,8 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: #fff;
-  box-shadow: 0 4px 10px -3px hsla(0deg, 0%, 75%, 0.5);
+  background: #111;
+  box-shadow: 0 4px 10px -3px rgba(0, 0, 0, 0.5);
 }
 
 #header .logo h1 {
@@ -152,7 +152,7 @@ h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-size: 15px;
-  color: #151515;
+  color: #ffffff;
   text-transform: uppercase;
   white-space: nowrap;
   transition: 0.3s;
@@ -169,7 +169,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #7cc576;
+  color: #8a41ff;
 }
 
 .navbar .dropdown ul {
@@ -401,13 +401,13 @@ h6 {
   border-radius: 3px;
   margin: 10px;
   color: #fff;
-  background: #7cc576;
+  background: #a335ff;
 }
 
 #hero .btn-get-started:hover {
   transition: 0.5s;
   background: #fff;
-  color: #7cc576;
+  color: #a335ff;
 }
 
 @media (min-width: 1024px) {
@@ -433,10 +433,11 @@ h6 {
 section {
   padding: 60px 0;
   overflow: hidden;
+  background-color: #222;
 }
 
 .section-bg {
-  background-color: whitesmoke;
+  background-color: #444;
 }
 
 .section-title {
@@ -450,7 +451,7 @@ section {
   text-transform: uppercase;
   margin-bottom: 15px;
   padding-bottom: 0;
-  color: #151515;
+  color: #a335ff;
 }
 
 .section-title p {
@@ -840,7 +841,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #7cc576;
+  background: #a335ff;
   color: #fff;
 }
 
@@ -1161,7 +1162,7 @@ section {
 # Team
 --------------------------------------------------------------*/
 .team {
-  background: #fff;
+  background: #222;
   padding: 60px 0;
 }
 
@@ -1184,7 +1185,7 @@ section {
   height: 40px;
   opacity: 0;
   transition: bottom ease-in-out 0.4s;
-  background: rgba(124, 197, 118, 0.8);
+  background: rgba(255, 9, 26, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1224,7 +1225,7 @@ section {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 15px;
-  color: #7cc576;
+  color: #ae68ff;
 }
 
 .team .member .member-info p {
